--- a/index.html
+++ b/index.html
@@ -13,53 +13,56 @@
       <div class="container">
         <div class="row align-items-center">
           <div class="col-12 col-lg-6 d-flex justify-content-center">
-            <img
+            <!-- <img
               src="images/hero-image.png"
               class="rounded-circle border border-white border-5 p-3 shadow m-5 img-fluid"
               alt=""
-              style="width: 100%"
-            />
+              style="width: 80%"
+            /> -->
+            <img src="images/hero-image.png" class="rounded-circle border border-white border-5 p-3 shadow m-5 img-fluid" alt="" style="width: 576px; height: 576px;" />
+
           </div>
 
-          <div class="col-12 col-lg-6">
+          <div class="col-12 col-lg-6 ps-5 ">
             <div class="mb-4">
-              <img src="images/logo.svg" class="w-auto" alt="" />
+              <img src="images/logo.svg" class="w-auto" alt="" style="height: 58px; width: 272px;"/>
             </div>
-            <div class="">
-              <h1>
-                We are <span class="text-danger">experts</span> in business,
-              </h1>
-              <h1>marketing, growth & sales.</h1>
+            <div class="mb-4">
+              <h1 style="font-size: 3rem; width: 100"> We are <span class="text-danger">experts</span> in business, </h1>
+              <h1 style="font-size: 3rem;">marketing, growth & sales.</h1>
             </div>
+            
             <div class="my-3">
-              <h5 class="mb-3">Login into your account</h5>
-              <form action="" class="d-grid gap-3 mx-auto">
+              <h4 class="mb-4 mt-3 ">Login into your account</h4>
+              <form action="" class="d-grid gap-4 mx-auto">
                 <input
                   type="text"
                   placeholder="Username"
-                  class="form-control form-control-lg w-75"
+                  class="form-control form-control-lg w-80 mb-3"
                 />
                 <input
                   type="password"
                   placeholder="Password"
-                  class="form-control form-control-lg w-75"
+                  class="form-control form-control-lg w-100 mb-3"
                 />
-                <div class="d-flex gap-3 align-items-center">
+                <div class="d-flex gap-3 align-items-center justify-content-between mb-3">
                   <a
                     href="dashboard.html"
                     type="submit"
-                    class="btn btn-danger rounded-pill h2 px-5"
+                    class="btn btn-danger rounded-pill h2 px-5 me-5"
+                    style="font-family: Roboto;"
                     >Login</a
                   >
-                  <a href="#" class="text-secondary text-decoration-none"
+                  <a href="#" class="text-secondary text-decoration-none ps-5  "
                     >Forget password?</a
                   >
-                </div>
+              </div>
+              
               </form>
             </div>
 
             <div class="d-flex">
-              <p class="">Are you a new Member?</p>
+              <p style="color: #adadad;">Are you a new Member?</p>
               <a class="text-danger text-decoration-none px-2" href="#"
                 >Register Here</a
               >
