feat : responsive css added

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <link href="css/bootstrap.min.css" rel="stylesheet" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="boo">
     <title>Assignment</title>
   </head>
   <body>
@@ -19,17 +20,17 @@
               alt=""
               style="width: 80%"
             /> -->
-            <img src="images/hero-image.png" class="rounded-circle border border-white border-5 p-3 shadow m-5 img-fluid" alt="" style="width: 576px; height: 576px;" />
+            <img src="images/hero-image.png" class="rounded-circle border border-white border-5 p-3 shadow m-5 img-fluid hero-img" />
 
           </div>
 
-          <div class="col-12 col-lg-6 ps-5 ">
+          <div class="col-12 col-lg-6 ps-lg-5 ">
             <div class="mb-4">
               <img src="images/logo.svg" class="w-auto" alt="" style="height: 58px; width: 272px;"/>
             </div>
             <div class="mb-4">
-              <h1 style="font-size: 3rem; width: 100"> We are <span class="text-danger">experts</span> in business, </h1>
-              <h1 style="font-size: 3rem;">marketing, growth & sales.</h1>
+              <h1 > We are <span class="text-danger">experts</span> in business, </h1>
+              <h1 >marketing, growth & sales.</h1>
             </div>
             
             <div class="my-3">
@@ -53,7 +54,7 @@
                     style="font-family: Roboto;"
                     >Login</a
                   >
-                  <a href="#" class="text-secondary text-decoration-none ps-5  "
+                  <a href="#" class="text-secondary text-decoration-none "
                     >Forget password?</a
                   >
               </div>
