feat : re take from old file

--- a/dashboard.html
+++ b/dashboard.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -350,6 +351,8 @@
     <!-- bootstrap js -->
     <script src="js/custom.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
+<!-- Code injected by live-server -->
+
 </body>
 
 </html>
