--- a/innerpage.html
+++ b/innerpage.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/bootstrap-float-label.css" rel="stylesheet">
+    <link rel="stylesheet" href="/css/res.css">
 
     <link rel="stylesheet" href="css/new.css" />
     <title>Analysis</title>
@@ -14,7 +15,7 @@
 <body>
     
     <!-- Side-Nav -->
-    <div class="side-navbar active-nav d-flex justify-content-between flex-wrap flex-column bg-white mt-4 pt-3"
+    <div class="side-navbar active-nav d-flex justify-content-between flex-wrap flex-column bg-white mt-4 pt-3 sbar"
         id="sidebar">
         <div class="vh-100 p-4">
             <ul class="nav nav-pills flex-column mt-5 p-2 gap-3">
